# static_atoms_rs

./: Cargo.toml  LICENSE  README.md
src/: bin.rs  dist.rs  filetype.rs  main.rs  tests.rs
src/tests/: mod.rs  tests_html.rs  tests_markdown.rs
