# cargo install cargo-packager --locked
# cargo install cargo-rpm --locked
#
# creating a release build of this project:
# cargo build --release
#
# build a package for debian & ubuntu:
# cargo packager --release
#
# build a package for fedora, bazzite and other rpm based systems
# cargo rpm --release

[package]
name = "static_atoms"
version = "2025.4.4"
authors = ['Robert Lang <https://mastodon.social/@biochemic>']
edition = "2024"
description = "a terminal program to transform a web template into a static website using nothing more than a few extra tags"
homepage = "https://55bytes.de/pages/all_projects"
license = "GPL-3.0-only"
repository = "https://github.com/TheBiochemic/static_atoms_rs"
readme = "README.md"
license-file = "LICENSE"

[[bin]]
name = "static_atoms"
path = "src/main.rs"

[package.metadata.packager]
name = "static_atoms_rs"
product-name = "static_atoms_rs"
authors = ['Robert Lang <https://mastodon.social/@biochemic>']
version = "2025.4.4"
before-packaging-command = "cargo build --release"
copyright = "Copyright 2025 Robert Lang"
license-file = "LICENSE"
identifier = "de.biochemist.static-atoms-rs"
category = "DeveloperTool"
description = "a terminal program to transform a web template into a static website using nothing more than a few extra tags"
homepage = "https://55bytes.de/pages/all_projects"
long-description = "A small Terminal Application that transforms a bunch of HTML Snippets into a static Website with nothing more than a bunch of Tags. The Workflow is employing a simplified bottom-up Model (similar from what you know as the atomic pattern), and implementing a method to build a static website with it without any JS. The tool is completely dependency free, and only uses rust's standard library features. It supports ingesting pages and embeds from HTML, CommonMark/Markdown and raw Text."
icons = ["./icon.png"]
resources = ["Cargo.toml", "LICENSE", "README.md", "src", "icon.png"]

[package.metadata.packager.deb]
section = "web"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
incremental = false
opt-level = 3
overflow-checks = false
strip = "symbols"
panic = "abort"
